err/j5basic.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/j5basic'...
Compiling './lib/python3.5/site-packages/j5basic/CleanXHTML.py'...
***   File "./lib/python3.5/site-packages/j5basic/CleanXHTML.py", line 30
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/DictUtils.py'...
***   File "./lib/python3.5/site-packages/j5basic/DictUtils.py", line 122
    raise TypeError, "cidict can only have str or unicode as key (got %r)" % type(key)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/ObjTracker.py'...
***   File "./lib/python3.5/site-packages/j5basic/ObjTracker.py", line 84
    print "BIGGEST INCREASES:"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/j5basic/TimeCache.py'...
***   File "./lib/python3.5/site-packages/j5basic/TimeCache.py", line 97
    raise KeyError, key
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/Timer.py'...
***   File "./lib/python3.5/site-packages/j5basic/Timer.py", line 86
    print time.time()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/WithContextSkip.py'...
***   File "./lib/python3.5/site-packages/j5basic/WithContextSkip.py", line 67
    except SkipStatement, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/test_InfiniteClasses.py'...
***   File "./lib/python3.5/site-packages/j5basic/test_InfiniteClasses.py", line 101
    self._do_comparisons(InfiniteObject, 99999999999999L)
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/test_TimeUtils.py'...
***   File "./lib/python3.5/site-packages/j5basic/test_TimeUtils.py", line 60
    print "Testing all day names from 0001/01/01 until 2000/08/01"
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/j5basic/test_TimedLock.py'...
***   File "./lib/python3.5/site-packages/j5basic/test_TimedLock.py", line 31
    print elapsed_time(), name, "sleep", t1
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/test_Timer.py'...
***   File "./lib/python3.5/site-packages/j5basic/test_Timer.py", line 26
    print self.errors[-1]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/j5basic/test_Uid.py'...
***   File "./lib/python3.5/site-packages/j5basic/test_Uid.py", line 16
    print len(ids)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/test_WithContextSkip.py'...
***   File "./lib/python3.5/site-packages/j5basic/test_WithContextSkip.py", line 87
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/j5basic/test_WithContextSkip_cpython.py'...
***   File "./lib/python3.5/site-packages/j5basic/test_WithContextSkip_cpython.py", line 75
    except ZeroDivisionError, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/j5basic-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
